User groups & advanced permission handling (#830)