@@ -32,6 +32,7 @@ import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
 import io.lumeer.api.model.Project;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.Rule;
 import io.lumeer.api.model.User;
 import io.lumeer.api.model.UserNotification;
@@ -40,6 +41,9 @@ import io.lumeer.api.model.function.Function;
 import io.lumeer.api.model.rule.AutoLinkRule;
 import io.lumeer.core.WorkspaceKeeper;
 import io.lumeer.core.auth.AuthenticatedUser;
+import io.lumeer.core.auth.PermissionCheckerUtil;
+import io.lumeer.core.auth.PermissionsChecker;
+import io.lumeer.core.exception.NoResourcePermissionException;
 import io.lumeer.core.exception.ServiceLimitsExceededException;
 import io.lumeer.core.task.ContextualTaskFactory;
 import io.lumeer.core.task.ListCollectionsIn10SecondsTask;
@@ -50,6 +54,7 @@ import io.lumeer.engine.api.data.DataDocument;
 import io.lumeer.storage.api.dao.CollectionDao;
 import io.lumeer.storage.api.dao.DataDao;
 import io.lumeer.storage.api.dao.DocumentDao;
+import io.lumeer.storage.api.dao.FavoriteItemDao;
 import io.lumeer.storage.api.dao.GroupDao;
 import io.lumeer.storage.api.dao.OrganizationDao;
 import io.lumeer.storage.api.dao.ProjectDao;
@@ -122,6 +127,12 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    private CollectionFacade collectionFacade;
 
    @Inject
+   private OrganizationFacade organizationFacade;
+
+   @Inject
+   private ProjectFacade projectFacade;
+
+   @Inject
    private CollectionDao collectionDao;
 
    @Inject
@@ -155,6 +166,9 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    private UserNotificationDao userNotificationDao;
 
    @Inject
+   private FavoriteItemDao favoriteItemDao;
+
+   @Inject
    private TaskExecutor taskExecutor;
 
    @Inject
@@ -163,38 +177,45 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    @Inject
    private ZapierFacade zapierFacade;
 
+   @Inject
+   private PermissionsChecker permissionsChecker;
+
    @Before
    public void configureProject() {
-      User user = new User(USER);
-      this.user = userDao.createUser(user);
+      user = userDao.createUser(new User(USER));
 
       Organization organization = new Organization();
       organization.setCode(ORGANIZATION_CODE);
       Permissions organizationPermissions = new Permissions();
-      userPermission = Permission.buildWithRoles(this.user.getId(), Organization.ROLES);
+      userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
       organizationPermissions.updateUserPermissions(userPermission);
       organization.setPermissions(organizationPermissions);
       this.organization = organizationDao.createOrganization(organization);
 
       projectDao.setOrganization(this.organization);
       groupDao.setOrganization(this.organization);
-      Group group = new Group(GROUP);
-      this.group = groupDao.createGroup(group);
+      favoriteItemDao.setOrganization(this.organization);
+      group = groupDao.createGroup(new Group(GROUP, Collections.singletonList(user.getId())));
+      user.setOrganizations(Collections.singleton(this.organization.getId()));
+      user = userDao.updateUser(user.getId(), user);
 
-      userPermission = Permission.buildWithRoles(this.user.getId(), Collection.ROLES);
-      groupPermission = Permission.buildWithRoles(this.group.getId(), Collections.singleton(Role.READ));
+      userPermission = Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read)));
+      groupPermission = Permission.buildWithRoles(this.group.getId(), Collections.singleton(new Role(RoleType.Read)));
 
       Project project = new Project();
       project.setCode(PROJECT_CODE);
 
       Permissions projectPermissions = new Permissions();
-      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Project.ROLES));
+      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.CollectionContribute), new Role(RoleType.UserConfig))));
       project.setPermissions(projectPermissions);
       this.project = projectDao.createProject(project);
 
       workspaceKeeper.setWorkspaceIds(this.organization.getId(), this.project.getId());
 
       collectionDao.setProject(project);
+
+      PermissionCheckerUtil.allowGroups();
+      permissionsChecker.getPermissionAdapter().invalidateUserCache();
    }
 
    private Collection prepareCollection(String code) {
@@ -233,6 +254,13 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testCreateCollection() {
       Collection collection = prepareCollection(CODE);
 
+      setProjectUserRoles(Set.of(new Role(RoleType.Read)));
+
+      assertThatThrownBy(() -> collectionFacade.createCollection(collection))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setProjectUserRoles(Set.of(new Role(RoleType.Read), new Role(RoleType.CollectionContribute)));
+
       Collection returnedCollection = collectionFacade.createCollection(collection);
       assertThat(returnedCollection).isNotNull();
       assertThat(returnedCollection.getId()).isNotNull();
@@ -250,12 +278,22 @@ public class CollectionFacadeIT extends IntegrationTestBase {
       assertions.assertAll();
    }
 
+   private void setProjectUserRoles(final Set<Role> roles) {
+      Permissions projectPermissions = new Permissions();
+      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
+      project.setPermissions(projectPermissions);
+      projectDao.updateProject(project.getId(), project);
+      workspaceCache.clear();
+   }
+
    @Test
    public void testUpdateCollection() {
       String collectionId = createCollection(CODE).getId();
 
       Collection updatedCollection = prepareCollection(CODE2);
       updatedCollection.getPermissions().removeUserPermission(USER);
+
+      setCollectionGroupRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.Manage)));
 
       collectionFacade.updateCollection(collectionId, updatedCollection);
 
@@ -268,6 +306,8 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    @Test
    public void testDeleteCollection() {
       String collectionId = createCollection(CODE).getId();
+
+      setCollectionGroupRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.Manage)));
 
       collectionFacade.deleteCollection(collectionId);
 
@@ -303,20 +343,25 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    }
 
    @Test
-   public void testUpdateCollectionAttributeAdd() {
+   public void testUpdateCollectionAttribute() {
       Collection collection = createCollection(CODE);
       assertThat(collection.getAttributes()).isEmpty();
 
+      setCollectionGroupRoles(collection, Set.of(new Role(RoleType.AttributeEdit)));
+
       Attribute attribute = new Attribute(ATTRIBUTE_ID, ATTRIBUTE_NAME, "", ATTRIBUTE_CONSTRAINT, ATTRIBUTE_FUNCTION, ATTRIBUTE_COUNT);
-      final Attribute createdAttribute = collectionFacade.updateCollectionAttribute(collection.getId(), ATTRIBUTE_ID, attribute);
+      collectionFacade.createCollectionAttributes(collection.getId(), Set.of(attribute));
 
       collection = collectionDao.getCollectionByCode(CODE);
       assertThat(collection).isNotNull();
       assertThat(collection.getAttributes()).hasSize(1);
 
+      attribute.setName("Updated name");
+      Attribute updatedAttribute = collectionFacade.updateCollectionAttribute(collection.getId(), ATTRIBUTE_ID, attribute);
+
       Attribute storedAttribute = collection.getAttributes().iterator().next();
       SoftAssertions assertions = new SoftAssertions();
-      assertions.assertThat(storedAttribute.getId()).isEqualTo(createdAttribute.getId());
+      assertions.assertThat(storedAttribute.getId()).isEqualTo(updatedAttribute.getId());
       assertions.assertThat(storedAttribute.getName()).isEqualTo(ATTRIBUTE_NAME);
       assertions.assertThat(storedAttribute.getConstraint()).isEqualTo(ATTRIBUTE_CONSTRAINT);
       assertions.assertThat(storedAttribute.getUsageCount()).isEqualTo(ATTRIBUTE_COUNT);
@@ -327,6 +372,8 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testCreateCollectionAttribute() {
       final Collection collection = createCollection(CODE);
       assertThat(collection.getAttributes()).isEmpty();
+
+      setCollectionGroupRoles(collection, Set.of(new Role(RoleType.AttributeEdit)));
 
       final var attributeIds = new HashSet<String>();
 
@@ -364,6 +411,8 @@ public class CollectionFacadeIT extends IntegrationTestBase {
       Collection collection = createCollection(CODE, attribute);
       assertThat(collection.getAttributes()).isNotEmpty();
 
+      setCollectionGroupRoles(collection, Set.of(new Role(RoleType.AttributeEdit)));
+
       Attribute updatedAttribute = new Attribute(ATTRIBUTE_ID, ATTRIBUTE_NAME2, null, ATTRIBUTE_CONSTRAINT, ATTRIBUTE_FUNCTION, ATTRIBUTE_COUNT);
       collectionFacade.updateCollectionAttribute(collection.getId(), ATTRIBUTE_ID, updatedAttribute);
 
@@ -386,11 +435,30 @@ public class CollectionFacadeIT extends IntegrationTestBase {
       Collection collection = createCollection(CODE, attribute);
       assertThat(collection.getAttributes()).isNotEmpty();
 
+      final String collectionId = collection.getId();
+      assertThatThrownBy(() -> collectionFacade.deleteCollectionAttribute(collectionId, ATTRIBUTE_ID))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setCollectionGroupRoles(collection, Set.of(new Role(RoleType.Read), new Role(RoleType.AttributeEdit)));
       collectionFacade.deleteCollectionAttribute(collection.getId(), ATTRIBUTE_ID);
 
       collection = collectionDao.getCollectionByCode(CODE);
       assertThat(collection).isNotNull();
       assertThat(collection.getAttributes()).isEmpty();
+   }
+
+   private Collection setCollectionUserRoles(Collection collection, final Set<Role> roles) {
+      Permissions permissions = collection.getPermissions();
+      permissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
+      collection.setPermissions(permissions);
+      return collectionDao.updateCollection(collection.getId(), collection, null);
+   }
+
+   private Collection setCollectionGroupRoles(Collection collection, final Set<Role> roles) {
+      Permissions permissions = collection.getPermissions();
+      permissions.updateGroupPermissions(Permission.buildWithRoles(this.group.getId(), roles));
+      collection.setPermissions(permissions);
+      return collectionDao.updateCollection(collection.getId(), collection, null);
    }
 
    @Test
@@ -405,6 +473,8 @@ public class CollectionFacadeIT extends IntegrationTestBase {
 
       Collection collection2 = createCollection(CODE2, attribute, rules);
       assertThat(collection2.getRules().get("A")).isNotNull();
+
+      setCollectionGroupRoles(collection, Set.of(new Role(RoleType.Read), new Role(RoleType.AttributeEdit)));
 
       collectionFacade.deleteCollectionAttribute(collection.getId(), attribute.getId());
       collection = collectionFacade.getCollection(collection.getId());
@@ -440,24 +510,35 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testGetCollectionPermissions() {
       String collectionId = createCollection(CODE).getId();
 
+      assertThatThrownBy(() -> collectionFacade.getCollectionPermissions(collectionId))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setCollectionUserRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.UserConfig)));
+
       Permissions permissions = collectionFacade.getCollectionPermissions(collectionId);
       assertThat(permissions).isNotNull();
-      assertPermissions(permissions.getUserPermissions(), this.userPermission);
+      assertPermissions(permissions.getUserPermissions(), new Permission(user.getId(), Set.of(new Role(RoleType.UserConfig))));
       assertPermissions(permissions.getGroupPermissions(), this.groupPermission);
    }
 
    @Test
    public void testUpdateUserPermissions() {
       String USER2 = "aaa" + user.getId().substring(3);
-      userDao.createUser(new User(USER2, USER2, USER2, Collections.emptyMap()));
+      userDao.createUser(new User(USER2, USER2, USER2, Collections.singleton(organization.getId())));
 
       var notifications = userNotificationFacade.getNotifications();
       assertThat(notifications).isEmpty();
 
-      final Collection collection = createCollection(CODE);
+      Collection collection = createCollection(CODE);
       final String collectionId = collection.getId();
 
-      Permission userPermission = Permission.buildWithRoles(user.getId(), Set.of(Role.MANAGE, Role.READ));
+      final Permission userPermission = Permission.buildWithRoles(user.getId(), Set.of(new Role(RoleType.UserConfig), new Role(RoleType.Manage)));
+
+      assertThatThrownBy(() -> collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission)))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setCollectionUserRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.UserConfig)));
+
       collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission));
 
       Permissions permissions = collectionDao.getCollectionByCode(CODE).getPermissions();
@@ -465,26 +546,31 @@ public class CollectionFacadeIT extends IntegrationTestBase {
       assertPermissions(permissions.getUserPermissions(), userPermission);
       assertPermissions(permissions.getGroupPermissions(), this.groupPermission);
 
-      userPermission = Permission.buildWithRoles(USER2, Set.of(Role.MANAGE, Role.READ));
-      collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission));
+      Permission userPermission2 = Permission.buildWithRoles(USER2, Set.of(new Role(RoleType.Read)));
+      organizationFacade.updateUserPermissions(organization.getId(), Set.of(userPermission2));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(userPermission2));
+      collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission2));
 
       notifications = userNotificationDao.getRecentNotifications(USER2);
-      assertThat(notifications).hasSize(1).allMatch(n ->
-            n.getData().getString(UserNotification.CollectionShared.COLLECTION_COLOR).equals(COLOR)
-                  && n.getUserId().equals(USER2)
-                  && n.getData().getString(UserNotification.CollectionShared.COLLECTION_ID).equals(collectionId));
+      assertThat(notifications).hasSize(3).anyMatch(n ->
+            COLOR.equals(n.getData().getString(UserNotification.CollectionShared.COLLECTION_COLOR))
+                  && USER2.equals(n.getUserId())
+                  && collectionId.equals(n.getData().getString(UserNotification.CollectionShared.COLLECTION_ID)));
 
+      collection = collectionDao.getCollectionById(collection.getId());
       collection.setColor(COLOR2);
       collectionFacade.updateCollection(collectionId, collection);
 
       notifications = userNotificationDao.getRecentNotifications(USER2);
-      assertThat(notifications).hasSize(1).allMatch(n ->
-            n.getData().getString(UserNotification.CollectionShared.COLLECTION_COLOR).equals(COLOR2)
-                  && n.getUserId().equals(USER2)
-                  && n.getData().getString(UserNotification.CollectionShared.COLLECTION_ID).equals(collectionId));
+      assertThat(notifications).hasSize(3).anyMatch(n ->
+            COLOR2.equals(n.getData().getString(UserNotification.CollectionShared.COLLECTION_COLOR))
+                  && USER2.equals(n.getUserId())
+                  && collectionId.equals(n.getData().getString(UserNotification.CollectionShared.COLLECTION_ID)));
 
-      userPermission = Permission.buildWithRoles(USER2, Collections.emptySet());
-      collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission));
+      userPermission2 = Permission.buildWithRoles(USER2, Collections.emptySet());
+      organizationFacade.updateUserPermissions(organization.getId(), Set.of(userPermission2));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(userPermission2));
+      collectionFacade.updateUserPermissions(collectionId, Set.of(userPermission2));
 
       notifications = userNotificationDao.getRecentNotifications(USER2);
       assertThat(notifications).isEmpty();
@@ -494,6 +580,10 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testRemoveUserPermission() {
       String collectionId = createCollection(CODE).getId();
 
+      assertThatThrownBy(() -> collectionFacade.removeUserPermission(collectionId, user.getId()))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setCollectionUserRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.UserConfig)));
       collectionFacade.removeUserPermission(collectionId, user.getId());
 
       Permissions permissions = collectionDao.getCollectionByCode(CODE).getPermissions();
@@ -506,7 +596,9 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testUpdateGroupPermissions() {
       String collectionId = createCollection(CODE).getId();
 
-      Permission groupPermission = Permission.buildWithRoles(group.getId(), Set.of(Role.SHARE, Role.READ));
+      setCollectionGroupRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.UserConfig)));
+
+      Permission groupPermission = Permission.buildWithRoles(group.getId(), Set.of(new Role(RoleType.DataWrite), new Role(RoleType.Manage)));
       collectionFacade.updateGroupPermissions(collectionId, Set.of(groupPermission));
 
       Permissions permissions = collectionDao.getCollectionByCode(CODE).getPermissions();
@@ -519,6 +611,7 @@ public class CollectionFacadeIT extends IntegrationTestBase {
    public void testRemoveGroupPermission() {
       String collectionId = createCollection(CODE).getId();
 
+      setCollectionGroupRoles(collectionDao.getCollectionById(collectionId), Set.of(new Role(RoleType.UserConfig)));
       collectionFacade.removeGroupPermission(collectionId, group.getId());
 
       Permissions permissions = collectionDao.getCollectionByCode(CODE).getPermissions();
@@ -615,23 +708,19 @@ public class CollectionFacadeIT extends IntegrationTestBase {
       collectionDao.createCollection(prepareCollection("CD1"));
       collectionDao.createCollection(prepareCollection("CD2"));
 
-      assertThat(collectionFacade.getCollections()).hasSize(2);
-
-      Permissions projectPermissions = new Permissions();
-      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ)));
-      project.setPermissions(projectPermissions);
-      projectDao.updateProject(project.getId(), project);
-      workspaceCache.clear();
-
-      assertThat(collectionFacade.getCollections()).hasSize(2);
-
-      Permissions organizationPermissions = new Permissions();
-      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ)));
-      organization.setPermissions(organizationPermissions);
-      organizationDao.updateOrganization(organization.getId(), organization);
-      workspaceCache.clear();
-
       assertThat(collectionFacade.getCollections()).isEmpty();
+
+      setProjectUserRoles(Set.of(new Role(RoleType.Read, true)));
+      assertThat(collectionFacade.getCollections()).hasSize(2);
+
+      setProjectUserRoles(Set.of(new Role(RoleType.Read)));
+      assertThat(collectionFacade.getCollections()).isEmpty();
+
+      setCollectionGroupRoles(collectionDao.getCollectionByCode("CD1"), Set.of(new Role(RoleType.Read)));
+      assertThat(collectionFacade.getCollections()).hasSize(1);
+
+      setCollectionGroupRoles(collectionDao.getCollectionByCode("CD2"), Set.of(new Role(RoleType.Read)));
+      assertThat(collectionFacade.getCollections()).hasSize(2);
    }
 
    @Test
