@@ -26,9 +26,12 @@ import io.lumeer.api.model.Organization;
 import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.User;
 import io.lumeer.core.auth.AuthenticatedUser;
 import io.lumeer.core.WorkspaceKeeper;
+import io.lumeer.core.auth.PermissionCheckerUtil;
+import io.lumeer.core.auth.PermissionsChecker;
 import io.lumeer.core.exception.NoResourcePermissionException;
 import io.lumeer.engine.IntegrationTestBase;
 import io.lumeer.storage.api.dao.GroupDao;
@@ -39,10 +42,6 @@ import org.jboss.arquillian.junit.Arquillian;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -62,6 +61,7 @@ public class GroupFacadeIT extends IntegrationTestBase {
    private static final String USER3 = "user3@gmail.com";
 
    private Organization organization;
+   private User user;
 
    @Inject
    private GroupFacade groupFacade;
@@ -78,20 +78,26 @@ public class GroupFacadeIT extends IntegrationTestBase {
    @Inject
    private WorkspaceKeeper workspaceKeeper;
 
+   @Inject
+   private PermissionsChecker permissionsChecker;
+
    @Before
    public void configure() {
       User user = new User(USER);
-      final User createdUser = userDao.createUser(user);
+      this.user = userDao.createUser(user);
 
       Organization organization1 = new Organization();
       organization1.setCode("LMR");
       organization1.setPermissions(new Permissions());
-      organization1.getPermissions().updateUserPermissions(new Permission(createdUser.getId(), Role.toStringRoles(new HashSet<>(Arrays.asList(Role.WRITE, Role.READ, Role.MANAGE)))));
+      organization1.getPermissions().updateUserPermissions(new Permission(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig))));
       organization = organizationDao.createOrganization(organization1);
 
       workspaceKeeper.setOrganizationId(organization.getId());
       groupDao.createRepository(organization);
       groupDao.setOrganization(organization);
+
+      PermissionCheckerUtil.allowGroups();
+      permissionsChecker.getPermissionAdapter().invalidateUserCache();
    }
 
    @Test
@@ -124,6 +130,19 @@ public class GroupFacadeIT extends IntegrationTestBase {
    }
 
    @Test
+   public void testUpdateGroupDifferentId() {
+      String groupId = groupFacade.createGroup(new Group(GROUP1)).getId();
+      assertThat(getGroup(GROUP1)).isNotNull();
+
+      String newGroupId = "5aedf1030b4e0ec3f46502d8";
+
+      groupFacade.updateGroup(groupId, new Group(newGroupId, GROUP2));
+      assertThat(getGroup(GROUP1)).isNull();
+      assertThat(getGroup(GROUP2)).isNotNull();
+      assertThat(getGroup(GROUP2).getId()).isEqualTo(groupId);
+   }
+
+   @Test
    public void testUpdateGroupNoPermission() {
       String groupId = groupFacade.createGroup(new Group(GROUP1)).getId();
 
@@ -147,39 +166,6 @@ public class GroupFacadeIT extends IntegrationTestBase {
       groupFacade.deleteGroup(id2);
       groups = groupDao.getAllGroups();
       assertThat(groups).isEmpty();
-   }
-
-   @Test
-   public void testDeleteGroupWithUsers() {
-      String id1 = groupFacade.createGroup(new Group(GROUP1)).getId();
-      String id2 = groupFacade.createGroup(new Group(GROUP2)).getId();
-      String id3 = groupFacade.createGroup(new Group(GROUP3)).getId();
-
-      userDao.createUser(prepareUser(USER1, new HashSet<>(Arrays.asList(id1, id2, id3))));
-      userDao.createUser(prepareUser(USER2, new HashSet<>(Arrays.asList(id1, id2))));
-      userDao.createUser(prepareUser(USER3, new HashSet<>(Arrays.asList(id2, id3))));
-
-      assertThat(getUser(organization.getId(), USER1).getGroups().get(organization.getId())).containsOnly(id1, id2, id3);
-      assertThat(getUser(organization.getId(), USER2).getGroups().get(organization.getId())).containsOnly(id1, id2);
-      assertThat(getUser(organization.getId(), USER3).getGroups().get(organization.getId())).containsOnly(id2, id3);
-
-      groupFacade.deleteGroup(id1);
-
-      assertThat(getUser(organization.getId(), USER1).getGroups().get(organization.getId())).containsOnly(id2, id3);
-      assertThat(getUser(organization.getId(), USER2).getGroups().get(organization.getId())).containsOnly(id2);
-      assertThat(getUser(organization.getId(), USER3).getGroups().get(organization.getId())).containsOnly(id2, id3);
-
-      groupFacade.deleteGroup(id2);
-
-      assertThat(getUser(organization.getId(), USER1).getGroups().get(organization.getId())).containsOnly(id3);
-      assertThat(getUser(organization.getId(), USER2).getGroups().get(organization.getId())).isEmpty();
-      assertThat(getUser(organization.getId(), USER3).getGroups().get(organization.getId())).containsOnly(id3);
-
-      groupFacade.deleteGroup(id3);
-
-      assertThat(getUser(organization.getId(), USER1).getGroups().get(organization.getId())).isEmpty();
-      assertThat(getUser(organization.getId(), USER2).getGroups().get(organization.getId())).isEmpty();
-      assertThat(getUser(organization.getId(), USER3).getGroups().get(organization.getId())).isEmpty();
    }
 
    @Test
@@ -213,22 +199,11 @@ public class GroupFacadeIT extends IntegrationTestBase {
       return groupOptional.orElse(null);
    }
 
-   private User getUser(String organizationId, String user) {
-      Optional<User> userOptional = userDao.getAllUsers(organizationId).stream().filter(u -> u.getEmail().equals(user)).findFirst();
-      return userOptional.orElse(null);
-   }
-
-   private User prepareUser(String user, Set<String> groups) {
-      User u = new User(user);
-      u.setName(user);
-      u.setGroups(Collections.singletonMap(organization.getId(), groups));
-      return u;
-   }
-
    private void setOrganizationWithoutPermissions() {
       Organization organization3 = new Organization();
       organization3.setCode("RML");
       organization3.setPermissions(new Permissions());
+      organization3.getPermissions().updateUserPermissions(new Permission(this.user.getId(), Set.of(new Role(RoleType.ProjectContribute))));
       Organization organizationNotPermission = organizationDao.createOrganization(organization3);
 
       workspaceKeeper.setOrganizationId(organizationNotPermission.getId());
