@@ -22,16 +22,22 @@ import static io.lumeer.test.util.LumeerAssertions.assertPermissions;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 
+import io.lumeer.api.model.Group;
 import io.lumeer.api.model.Organization;
 import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
 import io.lumeer.api.model.Project;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.User;
 import io.lumeer.api.model.common.Resource;
 import io.lumeer.core.WorkspaceKeeper;
 import io.lumeer.core.auth.AuthenticatedUser;
+import io.lumeer.core.auth.PermissionCheckerUtil;
+import io.lumeer.core.auth.PermissionsChecker;
+import io.lumeer.core.exception.NoResourcePermissionException;
 import io.lumeer.engine.IntegrationTestBase;
+import io.lumeer.storage.api.dao.GroupDao;
 import io.lumeer.storage.api.dao.OrganizationDao;
 import io.lumeer.storage.api.dao.ProjectDao;
 import io.lumeer.storage.api.dao.UserDao;
@@ -44,9 +50,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import javax.inject.Inject;
 
@@ -63,10 +67,16 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    private UserDao userDao;
 
    @Inject
+   private GroupDao groupDao;
+
+   @Inject
    private WorkspaceKeeper workspaceKeeper;
 
    @Inject
    private OrganizationDao organizationDao;
+
+   @Inject
+   private PermissionsChecker permissionsChecker;
 
    private static final String USER = AuthenticatedUser.DEFAULT_EMAIL;
    private static final String STRANGER_USER = "stranger@nowhere.com";
@@ -87,6 +97,7 @@ public class ProjectFacadeIT extends IntegrationTestBase {
 
    private User user;
    private User stranger;
+   private Group group;
    private Organization organization;
 
    private static final String ORGANIZATION_CODE = "TORG";
@@ -95,6 +106,11 @@ public class ProjectFacadeIT extends IntegrationTestBase {
       Project project = new Project(code, NAME, ICON, COLOR, null, null, null, false, null);
       project.getPermissions().updateUserPermissions(userPermissions);
       project.getPermissions().updateGroupPermissions(groupPermissions);
+      return projectDao.createProject(project);
+   }
+
+   private Project createProjectWithoutPermissions(String code) {
+      Project project = new Project(code, NAME, ICON, COLOR, null, null, null, false, null);
       return projectDao.createProject(project);
    }
 
@@ -112,25 +128,39 @@ public class ProjectFacadeIT extends IntegrationTestBase {
       return projectDao.createProject(project);
    }
 
+   private Project createProjectWithGroupRoles(final String code, final Set<Role> roles) {
+      Project project = new Project(code, NAME, ICON, COLOR, null, null, null, false, null);
+      project.getPermissions().updateGroupPermissions(new Permission(group.getId(), roles));
+      return projectDao.createProject(project);
+   }
+
    @Before
    public void configureProject() {
       this.user = userDao.createUser(new User(USER));
       this.stranger = userDao.createUser(new User(STRANGER_USER));
 
       userPermissions = Permission.buildWithRoles(this.user.getId(), Project.ROLES);
-      userReadonlyPermissions = Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ));
-      userStrangerPermissions = Permission.buildWithRoles(this.stranger.getId(), Collections.singleton(Role.READ));
-      groupPermissions = Permission.buildWithRoles(GROUP, Collections.singleton(Role.READ));
+      userReadonlyPermissions = Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read)));
+      userStrangerPermissions = Permission.buildWithRoles(this.stranger.getId(), Collections.singleton(new Role(RoleType.Read)));
 
       Organization organization = new Organization();
       organization.setCode(ORGANIZATION_CODE);
       organization.setPermissions(new Permissions());
-      organization.getPermissions().updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ)));
+      organization.getPermissions().updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read))));
       this.organization = organizationDao.createOrganization(organization);
+
+      groupDao.setOrganization(this.organization);
+      group = groupDao.createGroup(new Group(GROUP, Collections.singletonList(user.getId())));
+      user.setOrganizations(Collections.singleton(this.organization.getId()));
+      user = userDao.updateUser(user.getId(), user);
+      groupPermissions = Permission.buildWithRoles(group.getId(), Collections.singleton(new Role(RoleType.Read)));
 
       projectDao.setOrganization(this.organization);
 
-      workspaceKeeper.setOrganizationId(organization.getId());
+      workspaceKeeper.setOrganizationId(this.organization.getId());
+
+      PermissionCheckerUtil.allowGroups();
+      permissionsChecker.getPermissionAdapter().invalidateUserCache();
    }
 
    @Test
@@ -140,6 +170,30 @@ public class ProjectFacadeIT extends IntegrationTestBase {
 
       assertThat(projectFacade.getProjects())
             .extracting(Resource::getCode).containsOnly(CODE1, CODE2);
+   }
+
+   @Test
+   public void testGetProjectsByGroupTransitive() {
+      createProjectWithoutPermissions(CODE1);
+      createProjectWithoutPermissions(CODE2);
+
+      assertThat(projectFacade.getProjects()).isEmpty();
+
+      setOrganizationGroupRoles(Set.of(new Role(RoleType.Read, true)));
+
+      assertThat(projectFacade.getProjects()).hasSize(2);
+
+      setOrganizationGroupRoles(Set.of(new Role(RoleType.Read)));
+
+      assertThat(projectFacade.getProjects()).isEmpty();
+   }
+
+   private void setOrganizationGroupRoles(final Set<Role> roles) {
+      Permissions organizationPermissions = new Permissions();
+      organizationPermissions.updateGroupPermissions(Permission.buildWithRoles(this.group.getId(), roles));
+      organization.setPermissions(organizationPermissions);
+      organizationDao.updateOrganization(organization.getId(), organization);
+      workspaceCache.clear();
    }
 
    @Test
@@ -171,16 +225,34 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    }
 
    @Test
-   public void testCreateProject() {
-      addOrganizationManagePermission();
+   public void testDeleteProjectByGroup() {
+      final Project project = createProjectWithGroupRoles(CODE1, Set.of(new Role(RoleType.Manage)));
 
+      projectFacade.deleteProject(project.getId());
+
+      assertThatThrownBy(() -> projectDao.getProjectByCode(CODE1))
+            .isInstanceOf(ResourceNotFoundException.class);
+
+      final Project project2 = createProjectWithGroupRoles(CODE1, Set.of(new Role(RoleType.Read)));
+
+      assertThatThrownBy(() -> projectFacade.deleteProject(project2.getId()))
+            .isInstanceOf(NoResourcePermissionException.class);
+   }
+
+   @Test
+   public void testCreateProject() {
+      setOrganizationUserRoles(Set.of(new Role(RoleType.Read)));
       Project project = new Project(CODE1, NAME, ICON, COLOR, null, null, null, false, null);
 
+      assertThatThrownBy(() -> projectFacade.createProject(project))
+            .isInstanceOf(NoResourcePermissionException.class);
+
+      setOrganizationUserRoles(Set.of(new Role(RoleType.Read), new Role(RoleType.ProjectContribute)));
       Project returnedProject = projectFacade.createProject(project);
       assertThat(returnedProject).isNotNull();
       assertThat(returnedProject.getId()).isNotNull();
 
-      Project storedProject = projectDao.getProjectByCode(CODE1);
+      Project storedProject = projectFacade.getProjectById(returnedProject.getId());
       assertThat(storedProject).isNotNull();
 
       SoftAssertions assertions = new SoftAssertions();
@@ -193,9 +265,9 @@ public class ProjectFacadeIT extends IntegrationTestBase {
       assertions.assertAll();
    }
 
-   private void addOrganizationManagePermission() {
+   private void setOrganizationUserRoles(final Set<Role> roles) {
       Permissions organizationPermissions = new Permissions();
-      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Organization.ROLES));
+      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
       organization.setPermissions(organizationPermissions);
       organizationDao.updateOrganization(organization.getId(), organization);
       workspaceCache.clear();
@@ -205,8 +277,7 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    public void testUpdateProject() {
       String id = createProject(CODE1).getId();
 
-      Project updatedProject = new Project(CODE2, NAME, ICON, COLOR, null, null, null, false, null);
-      updatedProject.getPermissions().removeUserPermission(this.user.getId());
+      Project updatedProject = new Project(CODE2, NAME, ICON, COLOR, null, null, new Permissions(Set.of(userPermissions), Set.of(groupPermissions)), false, null);
 
       projectFacade.updateProject(id, updatedProject);
 
@@ -230,9 +301,8 @@ public class ProjectFacadeIT extends IntegrationTestBase {
       assertPermissions(permissions.getUserPermissions(), userPermissions);
       assertPermissions(permissions.getGroupPermissions(), groupPermissions);
 
-      permissions = projectFacade.getProjectPermissions(project2.getId());
-      assertThat(permissions).isNotNull();
-      assertPermissions(permissions.getUserPermissions(), userReadonlyPermissions, Permission.buildWithRoles(userStrangerPermissions.getId(), Set.of(Role.READ)));
+      assertThatThrownBy(() -> projectFacade.getProjectPermissions(project2.getId()))
+            .isInstanceOf(NoResourcePermissionException.class);
 
       permissions = projectFacade.getProjectPermissions(project3.getId());
       assertThat(permissions).isNotNull();
@@ -243,7 +313,7 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    public void testUpdateUserPermissions() {
       final Project project = createProject(CODE1);
 
-      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(Role.MANAGE, Role.READ));
+      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.ViewContribute), new Role(RoleType.DataWrite, true)));
       projectFacade.updateUserPermissions(project.getId(), Set.of(userPermission));
 
       Permissions permissions = projectDao.getProjectByCode(CODE1).getPermissions();
@@ -268,7 +338,7 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    public void testUpdateGroupPermissions() {
       final Project project = createProject(CODE1);
 
-      Permission groupPermission = Permission.buildWithRoles(GROUP, new HashSet<>(Arrays.asList(Role.SHARE, Role.READ)));
+      Permission groupPermission = Permission.buildWithRoles(group.getId(), Set.of(new Role(RoleType.CollectionContribute, true), new Role(RoleType.DataWrite)));
       projectFacade.updateGroupPermissions(project.getId(), Set.of(groupPermission));
 
       Permissions permissions = projectDao.getProjectByCode(CODE1).getPermissions();
@@ -281,7 +351,7 @@ public class ProjectFacadeIT extends IntegrationTestBase {
    public void testRemoveGroupPermission() {
       final Project project = createProject(CODE1);
 
-      projectFacade.removeGroupPermission(project.getId(), GROUP);
+      projectFacade.removeGroupPermission(project.getId(), group.getId() );
 
       Permissions permissions = projectDao.getProjectByCode(CODE1).getPermissions();
       Assertions.assertThat(permissions).isNotNull();
