@@ -22,6 +22,7 @@ import static io.lumeer.test.util.LumeerAssertions.assertPermissions;
 import static org.assertj.core.api.Assertions.*;
 
 import io.lumeer.api.model.Collection;
+import io.lumeer.api.model.Group;
 import io.lumeer.api.model.Organization;
 import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
@@ -29,6 +30,7 @@ import io.lumeer.api.model.Project;
 import io.lumeer.api.model.Query;
 import io.lumeer.api.model.QueryStem;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.User;
 import io.lumeer.api.model.View;
 import io.lumeer.api.model.common.Resource;
@@ -38,6 +40,7 @@ import io.lumeer.core.auth.PermissionCheckerUtil;
 import io.lumeer.core.auth.PermissionsChecker;
 import io.lumeer.core.exception.NoResourcePermissionException;
 import io.lumeer.engine.IntegrationTestBase;
+import io.lumeer.storage.api.dao.GroupDao;
 import io.lumeer.storage.api.dao.OrganizationDao;
 import io.lumeer.storage.api.dao.ProjectDao;
 import io.lumeer.storage.api.dao.UserDao;
@@ -50,9 +53,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import javax.inject.Inject;
 
@@ -75,6 +76,7 @@ public class ViewFacadeIT extends IntegrationTestBase {
    private Permission userPermission;
    private Permission groupPermission;
    private User user;
+   private Group group;
    private Organization organization;
    private Project project;
 
@@ -89,6 +91,9 @@ public class ViewFacadeIT extends IntegrationTestBase {
    private UserDao userDao;
 
    @Inject
+   private GroupDao groupDao;
+
+   @Inject
    private ViewDao viewDao;
 
    @Inject
@@ -96,6 +101,12 @@ public class ViewFacadeIT extends IntegrationTestBase {
 
    @Inject
    private ViewFacade viewFacade;
+
+   @Inject
+   private OrganizationFacade organizationFacade;
+
+   @Inject
+   private ProjectFacade projectFacade;
 
    @Inject
    private WorkspaceKeeper workspaceKeeper;
@@ -117,15 +128,19 @@ public class ViewFacadeIT extends IntegrationTestBase {
       Organization storedOrganization = organizationDao.createOrganization(organization);
 
       projectDao.setOrganization(storedOrganization);
+      groupDao.setOrganization(storedOrganization);
+      group = groupDao.createGroup(new Group(GROUP, Collections.singletonList(user.getId())));
+      user.setOrganizations(Collections.singleton(storedOrganization.getId()));
+      this.user = userDao.updateUser(user.getId(), user);
 
       Permissions organizationPermissions = new Permissions();
-      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Organization.ROLES);
+      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read)));
       organizationPermissions.updateUserPermissions(userPermission);
       storedOrganization.setPermissions(organizationPermissions);
       this.organization = organizationDao.updateOrganization(storedOrganization.getId(), storedOrganization);
 
-      this.userPermission = Permission.buildWithRoles(this.user.getId(), View.ROLES);
-      this.groupPermission = Permission.buildWithRoles(GROUP, Collections.singleton(Role.READ));
+      this.userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read)));
+      this.groupPermission = Permission.buildWithRoles(this.group.getId(), Set.of(new Role(RoleType.Read)));
 
       Project project = new Project();
       project.setCode(PROJECT_CODE);
@@ -135,7 +150,7 @@ public class ViewFacadeIT extends IntegrationTestBase {
       workspaceKeeper.setWorkspaceIds(storedOrganization.getId(), storedProject.getId());
 
       Permissions projectPermissions = new Permissions();
-      Permission userProjectPermission = Permission.buildWithRoles(this.user.getId(), Project.ROLES);
+      Permission userProjectPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.ViewContribute), new Role(RoleType.CollectionContribute)));
       projectPermissions.updateUserPermissions(userProjectPermission);
       storedProject.setPermissions(projectPermissions);
       this.project = projectDao.updateProject(storedProject.getId(), storedProject);
@@ -144,12 +159,15 @@ public class ViewFacadeIT extends IntegrationTestBase {
 
       Collection collection = collectionFacade.createCollection(
             new Collection("abc", "abc random", ICON, COLOR, projectPermissions));
-      collectionFacade.updateUserPermissions(collection.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ))));
+      collectionFacade.updateUserPermissions(collection.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read)))));
       query = new Query(new QueryStem(collection.getId()));
+
+      PermissionCheckerUtil.allowGroups();
+      permissionsChecker.getPermissionAdapter().invalidateUserCache();
    }
 
    private View prepareView(String code) {
-      return new View(code, NAME, ICON, COLOR, null, null, null, query, PERSPECTIVE.toString(), CONFIG, null, this.user.getId(), Collections.emptyList());
+      return new View(code, NAME, ICON, COLOR, null, null, null, query, PERSPECTIVE, CONFIG, null, this.user.getId(), Collections.emptyList());
    }
 
    private View createView(String code) {
@@ -187,20 +205,30 @@ public class ViewFacadeIT extends IntegrationTestBase {
    public void testUpdateView() {
       final View view = createView(CODE);
 
-      View updatedView = prepareView(CODE2);
-      updatedView.getPermissions().removeUserPermission(this.user.getId());
+      View updatedView = prepareView(CODE);
+      updatedView.setName("Some other name");
 
       viewFacade.updateView(view.getId(), updatedView);
 
-      View storedView = viewDao.getViewByCode(CODE2);
+      View storedView = viewDao.getViewById(view.getId());
       assertThat(storedView).isNotNull();
       assertThat(storedView.getName()).isEqualTo(NAME);
+
+      setViewGroupRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.Manage)));
+
+      viewFacade.updateView(view.getId(), updatedView);
+
+      storedView = viewDao.getViewById(view.getId());
+      assertThat(storedView).isNotNull();
+      assertThat(storedView.getName()).isEqualTo("Some other name");
       assertThat(storedView.getPermissions().getUserPermissions()).containsOnly(userPermission);
    }
 
    @Test
    public void testDeleteView() {
       final View view = createView(CODE);
+
+      setViewGroupRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.Manage)));
 
       viewFacade.deleteView(view.getId());
 
@@ -242,47 +270,55 @@ public class ViewFacadeIT extends IntegrationTestBase {
    public void testGetViewPermissions() {
       final View view = createView(CODE);
 
+      View viewWithPermissions = setViewUserRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+
       Permissions permissions = viewFacade.getViewPermissions(view.getId());
       assertThat(permissions).isNotNull();
-      assertPermissions(permissions.getUserPermissions(), userPermission);
-      assertPermissions(permissions.getGroupPermissions(), groupPermission);
+      assertPermissions(permissions.getUserPermissions(), viewWithPermissions.getPermissions().getUserPermissions().toArray(new Permission[0]));
+      assertPermissions(permissions.getGroupPermissions(), viewWithPermissions.getPermissions().getGroupPermissions().toArray(new Permission[0]));
    }
 
    @Test
    public void testUpdateUserPermissions() {
       final View view = createView(CODE);
 
-      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(Role.MANAGE, Role.READ));
+      View viewWithPermissions = setViewGroupRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+
+      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.QueryConfig), new Role(RoleType.PerspectiveConfig)));
       viewFacade.updateUserPermissions(view.getId(), Set.of(userPermission));
 
       Permissions permissions = viewDao.getViewById(view.getId()).getPermissions();
       assertThat(permissions).isNotNull();
       assertPermissions(permissions.getUserPermissions(), userPermission);
-      assertPermissions(permissions.getGroupPermissions(), groupPermission);
+      assertPermissions(permissions.getGroupPermissions(), viewWithPermissions.getPermissions().getGroupPermissions().toArray(new Permission[0]));
    }
 
    @Test
    public void testRemoveUserPermission() {
       final View view = createView(CODE);
 
+      View viewWithPermissions = setViewGroupRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+
       viewFacade.removeUserPermission(view.getId(), this.user.getId());
 
       Permissions permissions = viewDao.getViewByCode(CODE).getPermissions();
       assertThat(permissions).isNotNull();
       assertThat(permissions.getUserPermissions()).isEmpty();
-      assertPermissions(permissions.getGroupPermissions(), groupPermission);
+      assertPermissions(permissions.getGroupPermissions(), viewWithPermissions.getPermissions().getGroupPermissions().toArray(new Permission[0]));
    }
 
    @Test
    public void testUpdateGroupPermissions() {
       final View view = createView(CODE);
 
-      Permission groupPermission = Permission.buildWithRoles(GROUP, Set.of(Role.SHARE, Role.READ));
+      View viewWithPermissions = setViewGroupRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+
+      Permission groupPermission = Permission.buildWithRoles(group.getId(), Set.of(new Role(RoleType.UserConfig)));
       viewFacade.updateGroupPermissions(view.getId(), Set.of(groupPermission));
 
       Permissions permissions = viewDao.getViewByCode(CODE).getPermissions();
       assertThat(permissions).isNotNull();
-      assertPermissions(permissions.getUserPermissions(), userPermission);
+      assertPermissions(permissions.getUserPermissions(), viewWithPermissions.getPermissions().getUserPermissions().toArray(new Permission[0]));
       assertPermissions(permissions.getGroupPermissions(), groupPermission);
    }
 
@@ -290,11 +326,13 @@ public class ViewFacadeIT extends IntegrationTestBase {
    public void testRemoveGroupPermission() {
       final View view = createView(CODE);
 
-      viewFacade.removeGroupPermission(view.getId(), GROUP);
+      View viewWithPermissions = setViewUserRoles(view, Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+
+      viewFacade.removeGroupPermission(view.getId(), group.getId());
 
       Permissions permissions = viewDao.getViewByCode(CODE).getPermissions();
       assertThat(permissions).isNotNull();
-      assertPermissions(permissions.getUserPermissions(), userPermission);
+      assertPermissions(permissions.getUserPermissions(), viewWithPermissions.getPermissions().getUserPermissions().toArray(new Permission[0]));
       assertThat(permissions.getGroupPermissions()).isEmpty();
    }
 
@@ -304,6 +342,13 @@ public class ViewFacadeIT extends IntegrationTestBase {
       final String COLLECTION_NAME = "kolekce1";
       final String COLLECTION_ICON = "fa-eye";
       final String COLLECTION_COLOR = "#abcdea";
+
+      setOrganizationUserRoles(Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)));
+      setProjectUserRoles(Set.of(new Role(RoleType.Read), new Role(RoleType.ViewContribute), new Role(RoleType.CollectionContribute), new Role(RoleType.UserConfig)));
+
+      Permission workspacePermission = Permission.buildWithRoles(NON_EXISTING_USER, Set.of(new Role(RoleType.Read)));
+      organizationFacade.updateUserPermissions(organization.getId(), Set.of(workspacePermission));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(workspacePermission));
 
       // create collection under a different user
       Permissions collectionPermissions = new Permissions();
@@ -343,7 +388,7 @@ public class ViewFacadeIT extends IntegrationTestBase {
       }
 
       try {
-         viewFacade.updateUserPermissions(view.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ))));
+         viewFacade.updateUserPermissions(view.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read)))));
          fail("Can manage view without manage rights");
       } catch (Exception e) {
          assertThat(e).isInstanceOf(NoResourcePermissionException.class);
@@ -352,10 +397,9 @@ public class ViewFacadeIT extends IntegrationTestBase {
       // share the view and make sure we can see it now
       Permissions viewPermissions = new Permissions();
       viewPermissions.updateUserPermissions(Permission.buildWithRoles(NON_EXISTING_USER, View.ROLES));
-      viewPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ)));
+      viewPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read))));
       view.setPermissions(viewPermissions);
       viewDao.updateView(view.getId(), view); // since we lost manage rights, we can only do it directly
-      permissionsChecker.invalidateCache(view);
 
       // now this should be all possible
       viewFacade.getViewById(view.getId());
@@ -370,30 +414,63 @@ public class ViewFacadeIT extends IntegrationTestBase {
       viewDao.createView(prepareView("CD1"));
       viewDao.createView(prepareView("CD2"));
 
+      setOrganizationUserRoles(Set.of(new Role(RoleType.Read, true)));
+      setProjectUserRoles(Set.of(new Role(RoleType.Read, true)));
+
       assertThat(viewFacade.getViews()).hasSize(2);
 
-      removeProjectManagePermission();
+      setProjectUserRoles(Set.of(new Role(RoleType.Read)));
 
       assertThat(viewFacade.getViews()).hasSize(2);
 
-      removeOrganizationManagePermission();
+      setOrganizationUserRoles(Set.of(new Role(RoleType.Read)));
 
       assertThat(viewFacade.getViews()).isEmpty();
    }
 
    private void removeOrganizationManagePermission() {
-      Permissions organizationPermissions = new Permissions();
-      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), new HashSet<>(Arrays.asList(Role.READ, Role.WRITE))));
+      Permissions organizationPermissions = organizationDao.getOrganizationById(organization.getId()).getPermissions();
+      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read))));
       organization.setPermissions(organizationPermissions);
       organizationDao.updateOrganization(organization.getId(), organization);
       workspaceCache.clear();
    }
 
    private void removeProjectManagePermission() {
-      Permissions projectPermissions = new Permissions();
-      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), new HashSet<>(Arrays.asList(Role.READ, Role.WRITE))));
+      Permissions projectPermissions = projectDao.getProjectById(project.getId()).getPermissions();
+      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read))));
       project.setPermissions(projectPermissions);
       projectDao.updateProject(project.getId(), project);
       workspaceCache.clear();
+   }
+
+   private void setOrganizationUserRoles(final Set<Role> roles) {
+      Permissions organizationPermissions = new Permissions();
+      organizationPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
+      organization.setPermissions(organizationPermissions);
+      organizationDao.updateOrganization(organization.getId(), organization);
+      workspaceCache.clear();
+   }
+
+   private void setProjectUserRoles(final Set<Role> roles) {
+      Permissions projectPermissions = new Permissions();
+      projectPermissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
+      project.setPermissions(projectPermissions);
+      projectDao.updateProject(project.getId(), project);
+      workspaceCache.clear();
+   }
+
+   private View setViewUserRoles(View view, final Set<Role> roles) {
+      Permissions permissions = view.getPermissions();
+      permissions.updateUserPermissions(Permission.buildWithRoles(this.user.getId(), roles));
+      view.setPermissions(permissions);
+      return viewDao.updateView(view.getId(), view, null);
+   }
+
+   private View setViewGroupRoles(View view, final Set<Role> roles) {
+      Permissions permissions = view.getPermissions();
+      permissions.updateGroupPermissions(Permission.buildWithRoles(this.group.getId(), roles));
+      view.setPermissions(permissions);
+      return viewDao.updateView(view.getId(), view, null);
    }
 }
