@@ -27,8 +27,10 @@ import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
 import io.lumeer.api.model.Project;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.User;
 import io.lumeer.core.auth.AuthenticatedUser;
+import io.lumeer.core.auth.PermissionCheckerUtil;
 import io.lumeer.storage.api.dao.OrganizationDao;
 import io.lumeer.storage.api.dao.ProjectDao;
 import io.lumeer.storage.api.dao.UserDao;
@@ -40,9 +42,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -72,7 +72,7 @@ public class ProjectServiceIT extends ServiceIntegrationTestBase {
    private static final String ICON = "fa-search";
 
    private static final Set<Role> USER_ROLES = Project.ROLES;
-   private static final Set<Role> GROUP_ROLES = Collections.singleton(Role.READ);
+   private static final Set<Role> GROUP_ROLES = Collections.singleton(new Role(RoleType.Read));
    private Permission userPermission;
    private Permission groupPermission;
 
@@ -106,6 +106,8 @@ public class ProjectServiceIT extends ServiceIntegrationTestBase {
       projectDao.setOrganization(storedOrganization);
 
       projectUrl = organizationPath(storedOrganization) + "projects";
+
+      PermissionCheckerUtil.allowGroups();
    }
 
    private Project createProject(String code) {
@@ -213,7 +215,7 @@ public class ProjectServiceIT extends ServiceIntegrationTestBase {
    public void testUpdateProject() {
       final Project project = createProject(CODE1);
 
-      Project updatedProject = new Project(CODE2, NAME, ICON, COLOR, null, null, null, false, null);
+      Project updatedProject = new Project(CODE2, NAME, ICON, COLOR, null, null, new Permissions(Set.of(userPermission), Set.of(groupPermission)), false, null);
       Entity entity = Entity.json(updatedProject);
 
       Response response = client.target(projectUrl).path(project.getId())
@@ -264,7 +266,7 @@ public class ProjectServiceIT extends ServiceIntegrationTestBase {
    public void testUpdateUserPermissions() {
       final Project project = createProject(CODE1);
 
-      Permission[] userPermission = { Permission.buildWithRoles(this.user.getId(), new HashSet<>(Arrays.asList(Role.MANAGE, Role.READ))) };
+      Permission[] userPermission = { Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Manage, true), new Role(RoleType.CollectionContribute))) };
       Entity entity = Entity.json(userPermission);
 
       Response response = client.target(projectUrl).path(project.getId()).path("permissions").path("users")
@@ -304,7 +306,7 @@ public class ProjectServiceIT extends ServiceIntegrationTestBase {
    public void testUpdateGroupPermissions() {
       final Project project = createProject(CODE1);
 
-      Permission[] groupPermission = { Permission.buildWithRoles(GROUP, new HashSet<>(Arrays.asList(Role.SHARE, Role.READ))) };
+      Permission[] groupPermission = { Permission.buildWithRoles(GROUP, Set.of(new Role(RoleType.DataContribute, true), new Role(RoleType.UserConfig))) };
       Entity entity = Entity.json(groupPermission);
 
       Response response = client.target(projectUrl).path(project.getId()).path("permissions").path("groups")
