@@ -27,9 +27,11 @@ import io.lumeer.api.model.Permission;
 import io.lumeer.api.model.Permissions;
 import io.lumeer.api.model.Project;
 import io.lumeer.api.model.Role;
+import io.lumeer.api.model.RoleType;
 import io.lumeer.api.model.User;
 import io.lumeer.core.WorkspaceKeeper;
 import io.lumeer.core.auth.AuthenticatedUser;
+import io.lumeer.core.auth.PermissionCheckerUtil;
 import io.lumeer.core.facade.ProjectFacade;
 import io.lumeer.remote.rest.ServiceIntegrationTestBase;
 import io.lumeer.storage.api.dao.OrganizationDao;
@@ -43,7 +45,6 @@ import org.junit.runner.RunWith;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import javax.inject.Inject;
@@ -53,7 +54,7 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 @RunWith(Arquillian.class)
-public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
+public class  ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
 
    @Inject
    private ProjectFacade projectFacade;
@@ -89,7 +90,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       Organization storedOrganization = organizationDao.createOrganization(organization);
 
       Permissions organizationPermissions = new Permissions();
-      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Collections.singleton(Role.READ));
+      Permission userPermission = Permission.buildWithRoles(this.user.getId(), Collections.singleton(new Role(RoleType.Read)));
       organizationPermissions.updateUserPermissions(userPermission);
       storedOrganization.setPermissions(organizationPermissions);
       organizationDao.updateOrganization(storedOrganization.getId(), storedOrganization);
@@ -98,6 +99,8 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       workspaceKeeper.setOrganizationId(storedOrganization.getId());
 
       projectsUrl = organizationPath(storedOrganization) + "projects/";
+
+      PermissionCheckerUtil.allowGroups();
    }
 
    private Project createProject(String code, String name) {
@@ -123,7 +126,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectReadRole_code";
       String projectName = "testGetProjectReadRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read)))));
 
       Response response = client.target(projectsUrl).path(project.getId())
                                 .request(MediaType.APPLICATION_JSON).buildGet().invoke();
@@ -152,7 +155,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testUpdateProjectManageRole_code";
       String projectName = "testUpdateProjectManageRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.Manage)))));
       String newProjectName = "NewName";
       Project newProject = new Project(projectCode, newProjectName, "a", "b", null, null, null, false, null);
 
@@ -182,7 +185,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
          if (i % 2 == 0) {
             projectFacade.removeUserPermission(project.getId(), this.user.getId());
          } else {
-            projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ))));
+            projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read)))));
          }
       }
 
@@ -213,7 +216,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "ProjectServiceTestProject_code1";
       String projectName = "ProjectServiceTestProject1";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.Manage)))));
 
       Response response = client.target(projectsUrl).path(project.getId())
                                 .request(MediaType.APPLICATION_JSON).buildDelete().invoke();
@@ -266,7 +269,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectPermissionsManageRole_code1";
       String projectName = "testGetProjectPermissionsManageRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)))));
 
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions")
                                 .request(MediaType.APPLICATION_JSON).buildGet().invoke();
@@ -281,7 +284,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       final Project project = createProject(projectCode, projectName);
       projectFacade.removeUserPermission(project.getId(), this.user.getId());
 
-      Permission[] newPermission = { Permission.buildWithRoles(this.user.getId(), Set.of(Role.WRITE)) };
+      Permission[] newPermission = { Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.DataWrite))) };
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("users")
                                 .request(MediaType.APPLICATION_JSON).buildPut(Entity.json(newPermission)).invoke();
       assertThat(response.getStatusInfo()).isEqualTo(Response.Status.FORBIDDEN);
@@ -292,9 +295,9 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectPermissionsNoRole_code1";
       String projectName = "testGetProjectPermissionsNoRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)))));
 
-      Permission[] newPermission = { Permission.buildWithRoles(this.user.getId(), Set.of(Role.WRITE)) };
+      Permission[] newPermission = { Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.DataWrite))) };
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("users")
                                 .request(MediaType.APPLICATION_JSON).buildPut(Entity.json(newPermission)).invoke();
       assertThat(response.getStatusInfo()).isEqualTo(Response.Status.OK);
@@ -317,7 +320,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectPermissionsNoRole_code1";
       String projectName = "testGetProjectPermissionsNoRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(),Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)))));
 
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("users").path(this.user.getId())
                                 .request(MediaType.APPLICATION_JSON).buildDelete().invoke();
@@ -331,7 +334,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       final Project project = createProject(projectCode, projectName);
       projectFacade.removeUserPermission(project.getId(), this.user.getId());
       String group = "testGroup4";
-      Permission[] newPermission = { new Permission(group, Role.toStringRoles(new HashSet<>(Arrays.asList(Role.WRITE)))) };
+      Permission[] newPermission = { new Permission(group, Set.of(new Role(RoleType.DataWrite))) };
 
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("groups")
                                 .request(MediaType.APPLICATION_JSON).buildPut(Entity.json(newPermission)).invoke();
@@ -343,9 +346,9 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectPermissionsNoRole_code1";
       String projectName = "testGetProjectPermissionsNoRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)))));
       String group = "testGroup5";
-      Permission[] newPermission = { new Permission(group, Role.toStringRoles(new HashSet<>(Arrays.asList(Role.WRITE)))) };
+      Permission[] newPermission = { new Permission(group, Set.of(new Role(RoleType.DataWrite))) };
 
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("groups")
                                 .request(MediaType.APPLICATION_JSON).buildPut(Entity.json(newPermission)).invoke();
@@ -370,7 +373,7 @@ public class ProjectServicePermissionsIT extends ServiceIntegrationTestBase {
       String projectCode = "testGetProjectPermissionsNoRole_code1";
       String projectName = "testGetProjectPermissionsNoRole";
       final Project project = createProject(projectCode, projectName);
-      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(Role.READ, Role.MANAGE))));
+      projectFacade.updateUserPermissions(project.getId(), Set.of(Permission.buildWithRoles(this.user.getId(), Set.of(new Role(RoleType.Read), new Role(RoleType.UserConfig)))));
       String group = "testGroup7";
 
       Response response = client.target(projectsUrl).path(project.getId()).path("permissions").path("groups").path(group)
